testdata/cot/invalid/syntax_errors/missing_paren.cot
// Missing closing parenthesis - should fail to parse

fn main( {
    var x = 1
}
